constraints/pod-security-policy-forbidden-sysctls-samples-psp-forbidden-sysctls-constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPSPForbiddenSysctls
metadata: # kpt-merge: /psp-forbidden-sysctls
  name: psp-forbidden-sysctls
spec:
  enforcementAction: warn
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
  parameters:
    forbiddenSysctls:
      # - "*" # * may be used to forbid all sysctls
      - kernel.*
